docs: refresh the forward register for the next session
The register stopped at PR #63. Fifteen pull requests landed after it.

Added five sections:

- Toolchain modernization wave 2. Kotlin 2.4.10 and JDK 25, and why
  Boot 3.5 rather than Boot 4 was the route to Java 25.
- The embedded vector provider. What exists, the two decisions with
  their measurements, and the three things phase 2 did not deliver.
- Dependency hygiene. One defect class found three times, the rule that
  now holds, and two corrections of my own earlier claims.
- The first dependency audit. Eleven findings at CVSS 9 or above, and
  why Spring Boot 4 is now security driven rather than currency driven.
- Where the next session starts. The owner's direction, the three gaps
  between a vector provider and a vector feature, and whether the
  embedding model and the reindex can run in parallel.

The status table named a branch that no longer exists and PR #61. It now
names master at d709dacc and PR #78.

The most load-bearing line for a new session: the store is real and the
vectors are not. No issue tracks the real embedding model.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014JpbDMU3hCfR633tYpAopH